# libimg.cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  make.sh
examples/: CMakeLists.txt  main.cpp  timer.hpp
libimg/: CMakeLists.txt
libimg/include/: common.hpp  console_log.hpp  image.hpp  img_assert.hpp  libimg  ops.hpp  pixel.hpp  types.hpp  utils.hpp
libimg/private_headers/: img_assert.hpp
libimg/src/: image.cpp  img_assert.hpp  ops.hpp  pixel.hpp  simple_containers.hpp
